# MrChat

./: CMakeLists.txt  README.md
include/server/AccountService/: AccountService.h
include/server/FriendService/: FriendService.h
include/server/GroupService/: GroupService.h
include/server/account/: AccountService.h
include/server/db/: MySQL.h
include/server/interface/: Interface.h  InterfaceService.h
include/server/proto/: AccountService.pb.h  FriendService.pb.h  GroupService.pb.h  Interface.pb.h
include/server/user/: UserService.h
src/client/: CMakeLists.txt  Cient.cpp
src/server/: CMakeLists.txt
src/server/AccountService/: AccountService.cpp  AccountService.proto  CMakeLists.txt  main.cpp
src/server/FriendService/: CMakeLists.txt  FriendService.cpp  FriendService.proto  main.cpp
src/server/GroupService/: CMakeLists.txt  GroupService.cpp  GroupService.proto
src/server/account/: AccountService.cpp  AccountService.proto  CMakeLists.txt  main.cpp
src/server/db/: MySQL.cpp
src/server/interface/: Interface.cpp  Interface.proto  InterfaceService.cpp  main.cpp
src/server/offlinemsg/: OfflineMsg.cpp
src/server/proto/: AccountService.pb.cc  FriendService.pb.cc  GroupService.pb.cc  Interface.pb.cc
src/server/user/: UserService.cpp
